<resources>
    <string name="app_name">QRHunter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom nav menu titles -->
    <string name="title_map">Map</string>
    <string name="title_scan">Scan</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>

    <!-- LeaderboardPage-->
    <string name="sample_rank">100</string>
    <string name="sample_name">GeneralFrassky</string>
    <string name="sample_score">39928</string>


    <!-- Profile page -->
    <string name="welcome_back">Welcome Back,</string>

    <!-- Player Init page -->
    <string name="welcome">Welcome!</string>
    <string name="username_text_hint">Username</string>
    <string name="username_helper_text">Username</string>
</resources>