<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/user_display"
    android:clickable="true"
    android:fontFamily="@font/roboto_medium"
    android:orientation="horizontal"
    android:paddingLeft="8dp"
    android:paddingTop="15dp"
    android:paddingRight="8dp"
    android:paddingBottom="15dp"
    android:textColor="@color/primary_dark">

    <TextView
        android:id="@+id/player_rank"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/sample_rank"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/sample_name"
        android:textAllCaps="false"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/player_rank"
        app:layout_constraintTop_toTopOf="parent" />
    <!--            app:layout_constraintWidth_default="wrap"
    -->

    <View
        android:id="@+id/divider2"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@color/primary_dark"
        android:backgroundTint="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_score"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="0dp"
        android:text="@string/sample_score"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>